--- a/GuiApp/kv/createUserScreen.kv
+++ b/GuiApp/kv/createUserScreen.kv
@@ -1,65 +1,51 @@
 <CreateUserScreen>:
-    BoxLayout:
-        orientation: 'vertical'
-        padding: [100, 100, 50, 100]
+    canvas:
+        Color:
+            rgba: 0.3, 0.3, 0.3, 1
+        Rectangle:
+            pos: self.pos
+            size: self.size
+    GridLayout:
+        cols: 1
+        padding: [100, 50, 100, 0]
         spacing: 25
-        size_hint: None, None
-        size: root.width, root.height
 
         Label:
             text: "Create New User"
-            font_size: 24
+            bold: True
+            font_size: 32
             size_hint_y: None
-            height: 30
+            height: 32
 
-        Label:
-            id: errorMessage
-            text: ""
-            color: 1, 0, 0, 1
-            opacity: 0
-
-        BoxLayout:
-            orientation: 'vertical'
-            size_hint: None, None
-            size: 400, 200
-            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
-            padding: [20, 20, 20, 20]
+        GridLayout:
+            cols: 1
             spacing: 10
+            size_hint_y: None
+            height: self.minimum_height
+            LargeTextInputWithHeader:
+                id: firstNameInput
+                header_text: "First name"
+                hint_text: "Enter first name"
+            LargeTextInputWithHeader:
+                id: lastNameInput
+                header_text: "Last name"
+                hint_text: "Enter last name"
+            LargeTextInputWithHeader:
+                id: cardIdInput
+                header_text: "Login card"
+                hint_text: "Blipp card to register (optional)"
+                disable_input: True
 
-            TextInput:
-                id: registerFirstName
-                hint_text: "First Name"
-                write_tab: False
-                size_hint_y: None
-                height: 40
-                padding: [10, 10]
+        GridLayout:
+            rows: 1
+            size_hint_y: None
+            height: self.minimum_height
+            spacing: 20
 
-            TextInput:
-                id: registerLastName
-                hint_text: "Last Name"
-                write_tab: False
-                size_hint_y: None
-                height: 40
-                padding: [10, 10]
-
-            TextInput:
-                id: registerEmployeeID
-                hint_text: "Employee id, Blipp Card (Optional)"
-                write_tab: False
-                disabled: True
-                size_hint_y: None
-                height: 40
-                padding: [10, 10]
-
-            BoxLayout:
-                orientation: 'horizontal'
-                size_hint_y: None
-                height: 40
-                spacing: 20
-
-                Button:
-                    text: "Register"
-                    on_press: root.registerUser()
-                Button:
-                    text: "Cancel"
-                    on_press: root.cancel()
+            LargeRegisterButton:
+                on_press: root.registerUser()
+            Widget: # Horizontal Spacer
+                size_hint: (1, None)
+                height: 100
+            LargeCancelButton:
+                on_press: root.cancel()
