--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -24,3 +24,4 @@
 #:include kv/editSummaryPopup.kv
 #:include kv/topUpSummaryPopup.kv
 #:include kv/uiElements/buttons.kv
+#:include kv/uiElements/textInputs.kv
