Fix negative and newline input crash

--- a/GuiApp/kv/topUpAmountScreen.kv
+++ b/GuiApp/kv/topUpAmountScreen.kv
@@ -40,6 +40,7 @@
             TextInput:
                 id: creditsToAdd
                 write_tab: False
+                multiline: False
                 hint_text: "Enter amount"
                 input_filter: "float"
                 size_hint_y: None
