--- a/GuiApp/kv/uiElements/textInputs.kv
+++ b/GuiApp/kv/uiElements/textInputs.kv
@@ -20,6 +20,7 @@
     TextInput:
         id: input
         write_tab: False
+        multiline: False
         hint_text: root.hint_text
         size_hint_y: None
         font_size: root.size_factor
