Increase size of text elements

--- a/GuiApp/kv/headerBodyLayout.kv
+++ b/GuiApp/kv/headerBodyLayout.kv
@@ -42,6 +42,8 @@
             
             Label:
                 text: 'Log out'
+                font_size: "28sp"
+                bold: True
                 size_hint: (1, 1)
 
 <Body>:
