--- a/GuiApp/kv/main.kv
+++ b/GuiApp/kv/main.kv
@@ -25,3 +25,4 @@
 #:include kv/topUpSummaryPopup.kv
 #:include kv/uiElements/buttons.kv
 #:include kv/uiElements/textInputs.kv
+#:include kv/editSystemSettingsScreen.kv
