--- a/GuiApp/kv/splashScreen.kv
+++ b/GuiApp/kv/splashScreen.kv
@@ -13,16 +13,15 @@
                 color: 'white'
     GridLayout:
         cols: 1
-        padding: [0, 185]
-        spacing: 21
+        padding: [0, 150]
         Image:
             source: 'Images/logo_type.png'
-            size_hint: (1, None)
             size: self.texture_size
         Label:
             halign: 'center'
-            size_hint_x: 1
-            font_size: 36
+            size_hint: (1, None)
+            height: 28
+            font_size: 27
             color: 'black'
             bold: True
             text: "Tap to login or create user..."
