Change to purchase fee and fix settings saving

--- a/GuiApp/kv/addSnackScreen.kv
+++ b/GuiApp/kv/addSnackScreen.kv
@@ -65,3 +65,10 @@
             size_hint_y: None
             height: 30
             text: "0.00 credits per item"
+        Label:
+            id: purchaseFeeLabel
+            font_size: "30sp"
+            size_hint_y: None
+            height: 30
+            text: "including fee of 5.00%"
+            bold: True
