--- a/GuiApp/kv/topUpPaymentScreen.kv
+++ b/GuiApp/kv/topUpPaymentScreen.kv
@@ -4,15 +4,16 @@
     rows: 1
     padding: 30
     spacing: 30
-    Image:
-        source: 'Images/swish-QR-small.png'
-        size: self.texture_size
+    GridLayout:
+        cols: 1
+        id: qrCodeLayout
     GridLayout:
         cols: 1
         spacing: 10
         GridLayout:
             cols: 1
             spacing: 10
+            padding: [0, 20]
             Label:
                 bold: True
                 text: "Step 1:"
@@ -25,19 +26,11 @@
                 text: "Step 2:"
                 font_size: 28
             Label:
-                id: amountLabel
-                text: "Select ?? SEK as amount"
-                font_size: 28
-            Label:
-                bold: True
-                text: "Step 3:"
-                font_size: 28
-            Label:
                 text: "Send payment"
                 font_size: 28
             Label:
                 bold: True
-                text: "Step 4:"
+                text: "Step 3:"
                 font_size: 28
             Label:
                 text: "Click confirm below"
